--- a/main.html
+++ b/main.html
@@ -8,9 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<div class="search">
+		<input type="text" class="input" placeholder="Search...">
+		<br>
+		<button class="btn">Submit</button>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
 
 </html>
