--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 
 	<div class="search">
-		<input type="text" class="input" placeholder="Search...">
+		<input type="text" class="inputt" placeholder="Search...">
 		
-		<button class="btn">Submit</button>
+		<button class="input">Submit</button>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
