--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 
 	<div class="search">
-		<input type="text" class="inputt" placeholder="Search...">
+		<input type="text" class="btn" placeholder="Search...">
 		
 		<button class="input">Submit</button>
 	</div>
