--- a/main.html
+++ b/main.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-
-	<div class="search">
-		<input type="text" class="btn" placeholder="Search...">
-		
-		<button class="input">Submit</button>
-	</div>
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="search">
+        <input type="text" placeholder="Search..." class="input" id="searchInput">
+        <button class="btn" id="searchButton">Search</button>
+    </div>
+    <script src="script.js"></script>
 </body>
-
 </html>
